# music_quiz

./: .gitignore  Cargo.toml  README.md  flake.nix  music_quiz.toml
.sqlx/: query-1bf98abbcd930899c9946fd1a6c3dcb449bde7b60503dcb0ccb71739e6c08e0a.json  query-40ddd54d9e7663074370c30880227a5bef54b6fba4696a0e19210378682d420c.json  query-64a13a79a3d1ae3368753ddf903e7032906c4fd03e3ac7f95ecbd4cd4d1f13fa.json  query-69f094bfa53e0aef8ed78332c77eb1c848840c3f45c56949ec1f123cfdd755fc.json  query-7c215d0bf0d199424952061346eb2157420d353b84fc5cfdf76489d87fbd2739.json  query-896dbe67194e715cd6cf83c28a5f4686f0156612bc94fa9f61842a88133b5485.json
migrations/: 20240315234730_init.sql
src/: db.rs  deezer.rs  lib.rs  loading.rs  main.rs  routing.rs  state.rs
static/css/: artist.css  common.css  font.css  search.css
static/js/: common.js  quiz.js
templates/: artist.html  base.html  search.html
templates/errors/: errbase.html  internal.html  invalidurl.html  loading.html  notfound.html  urlnotfound.html
