[package]
name = "music_quiz"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
askama = { version = "0.12.1", features = ["with-actix-web", "serde-json"] }
reqwest = { version = "0.12.2", default-features = false, features = ["json", "http2", "charset", "rustls-tls"] }
tokio = { version = "1.36.0", features = ["full"] }
actix-web = { version = "4.5.1", features = ["rustls"] }
url = { version = "2.5.0", features = ["serde"] }
chrono = { version = "0.4.35", features = ["serde"] }
lazy_static = "1.4.0"
thiserror = "1.0.58"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono"] }
serde_repr = "0.1.18"
log = "0.4.21"
askama_actix = "0.14.0"
actix-web-lab = "0.20.2"
toml = "0.8.12"
actix-files = "0.6.5"
env_logger = "0.11.3"
rand = "0.8.5"
itertools = "0.12.1"

[dev-dependencies]
serial_test = "3.0.0"
